--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </section>
 
             <section>
-                <img src="aindabem.jpg" alt="aindabem" class="audio-img">
+                <img src="dupla.jpeg" alt="aindabem" class="audio-img">
                 <audio id="audio" controls>
                     <source src="ainda bem.mp3" type="audio/mp3">
                 </audio>
