--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
             <section>
                 <img src="dupla.jpeg" alt="aindabem" class="audio-img">
-                <audio id="audio" controls>
+                <audio id="audio" controls class="playbutton">
                     <source src="ainda bem.mp3" type="audio/mp3">
                 </audio>
             </section>
